--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,9 @@
     <string name="save_movie">Save</string>
     <string name="search_btn">Search</string>
 
+    <string name="alert_title">Delete</string>
+    <string name="alert_msg">Are you Sure?</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
